force-app/main/default/objects/New_Business__c/New_Business__c.object-meta.xml
<CustomObject>
    <description>Object to track new business data as a child to account records</description>
    <label>New Business</label>
    <nameField>
        <displayFormat>NB-{000000}</displayFormat>
        <label>New Business Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>New Business</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>