force-app/main/default/objects/New_Business__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>New Business</relationshipLabel>
    <relationshipName>New_Business</relationshipName>
    <type>Lookup</type>
</CustomField>