force-app/main/default/objects/New_Business__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <formula>IF( ISPICKVAL( Type__c , &apos;New Business&apos;) , Account__r.Current_Year_New_Business__c ,
IF( ISPICKVAL( Type__c , &apos;Contracted&apos;), Account__r.Current_Year_Sum__c ,
IF( ISPICKVAL( Type__c , &apos;Projected&apos;), Account__r.Current_Year_Projected__c ,0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>