force-app/main/default/objects/New_Business__c/fields/Department_Amount2__c.field-meta.xml
<CustomField>
    <fullName>Department_Amount2__c</fullName>
    <label>Department Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>