force-app/main/default/objects/New_Business__c/fields/New_Currency__c.field-meta.xml
<CustomField>
    <fullName>New_Currency__c</fullName>
    <label>New Currency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>